@@ -3,30 +3,21 @@ package com.navigatingcancer.healthtracker.api.processor;
 import static org.mockito.Mockito.never;
 
 import com.navigatingcancer.healthtracker.api.TestConfig;
-import com.navigatingcancer.healthtracker.api.data.model.CheckIn;
-import com.navigatingcancer.healthtracker.api.data.model.CheckInFrequency;
-import com.navigatingcancer.healthtracker.api.data.model.CheckInSchedule;
-import com.navigatingcancer.healthtracker.api.data.model.CheckInStatus;
-import com.navigatingcancer.healthtracker.api.data.model.CheckInType;
-import com.navigatingcancer.healthtracker.api.data.model.Enrollment;
-import com.navigatingcancer.healthtracker.api.data.model.EnrollmentStatus;
-import com.navigatingcancer.healthtracker.api.data.model.EnrollmentStatusLog;
-import com.navigatingcancer.healthtracker.api.data.model.HealthTrackerEvent;
-import com.navigatingcancer.healthtracker.api.data.model.HealthTrackerStatus;
-import com.navigatingcancer.healthtracker.api.data.model.HealthTrackerStatusCategory;
+import com.navigatingcancer.healthtracker.api.data.client.PatientInfoServiceClient;
+import com.navigatingcancer.healthtracker.api.data.model.*;
+import com.navigatingcancer.healthtracker.api.data.model.patientInfo.PatientInfo;
 import com.navigatingcancer.healthtracker.api.data.model.survey.SurveyItemPayload;
 import com.navigatingcancer.healthtracker.api.data.model.survey.SurveyPayload;
 import com.navigatingcancer.healthtracker.api.data.repo.CheckInRepository;
 import com.navigatingcancer.healthtracker.api.data.repo.EnrollmentRepository;
 import com.navigatingcancer.healthtracker.api.data.repo.HealthTrackerEventsRepository;
 import com.navigatingcancer.healthtracker.api.data.repo.HealthTrackerStatusRepository;
+import com.navigatingcancer.healthtracker.api.data.repo.proReview.ProReviewRepository;
 import com.navigatingcancer.healthtracker.api.data.service.CheckInService;
 import com.navigatingcancer.healthtracker.api.data.service.impl.PatientRecordService;
 import com.navigatingcancer.healthtracker.api.data.service.impl.SchedulingServiceImpl;
 import com.navigatingcancer.healthtracker.api.processor.model.HealthTrackerStatusCommand;
 import com.navigatingcancer.notification.client.service.NotificationServiceClient;
-import com.navigatingcancer.patientinfo.PatientInfoClient;
-import com.navigatingcancer.patientinfo.domain.PatientInfo;
 import java.time.LocalDate;
 import java.time.LocalTime;
 import java.util.ArrayList;
@@ -34,9 +25,15 @@ import java.util.Arrays;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Optional;
-import java.util.Set;
+import java.util.concurrent.Callable;
+import java.util.concurrent.ExecutionException;
 import java.util.concurrent.Executor;
+import java.util.concurrent.ExecutorService;
+import java.util.concurrent.Executors;
+import java.util.concurrent.Future;
 import java.util.concurrent.TimeUnit;
+import java.util.stream.Collectors;
+import org.bson.types.ObjectId;
 import org.junit.Assert;
 import org.junit.Before;
 import org.junit.Ignore;
@@ -44,8 +41,6 @@ import org.junit.Test;
 import org.junit.runner.RunWith;
 import org.mockito.ArgumentCaptor;
 import org.mockito.Mockito;
-import org.springframework.amqp.core.Message;
-import org.springframework.amqp.core.MessageProperties;
 import org.springframework.amqp.rabbit.core.RabbitTemplate;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.boot.test.context.SpringBootTest;
@@ -63,15 +58,13 @@ public class HealthTrackerStatusServiceTest {
 
   @Autowired CheckInRepository checkinRepository;
 
-  @Autowired HealthTrackerStatusRepository statusRepository;
-
   @Autowired HealthTrackerStatusService healthTrackerStatusService;
 
   @Autowired HealthTrackerStatusRepository healthTrackerStatusRepository;
 
-  @Autowired HealthTrackerEventsRepository eventsReposotory;
+  @Autowired HealthTrackerEventsRepository eventsRepository;
 
-  @MockBean private PatientInfoClient patientInfoClient;
+  @MockBean private PatientInfoServiceClient patientInfoClient;
 
   @MockBean private NotificationServiceClient notificationServiceClient;
 
@@ -80,16 +73,23 @@ public class HealthTrackerStatusServiceTest {
   @MockBean private RabbitTemplate rabbitTemplate;
 
   @Autowired private PatientRecordService patientRecordService;
+  @Autowired private ProReviewRepository proReviewRepository;
 
   private Long patientId = 5L;
 
   @Before
   public void setup() {
+    enrollmentRepository.deleteAll();
+    checkinRepository.deleteAll();
+    healthTrackerStatusRepository.deleteAll();
+    proReviewRepository.deleteAll();
+
     PatientInfo patientInfo = new PatientInfo();
     patientInfo.setHighRisk(true);
     patientInfo.setId(patientId);
 
-    PatientInfoClient.FeignClient client = Mockito.mock(PatientInfoClient.FeignClient.class);
+    PatientInfoServiceClient.FeignClient client =
+        Mockito.mock(PatientInfoServiceClient.FeignClient.class);
     Mockito.when(patientInfoClient.getApi()).thenReturn(client);
     Mockito.when(client.getPatients(Mockito.any(), Mockito.any()))
         .thenReturn(Arrays.asList(patientInfo));
@@ -192,6 +192,7 @@ public class HealthTrackerStatusServiceTest {
       Integer cycles,
       List<CheckInSchedule> schedules) {
     Enrollment enrollment = new Enrollment();
+    enrollment.setId(ObjectId.get().toHexString());
     enrollment.setClinicId(clinicId);
     enrollment.setLocationId(locationId);
     enrollment.setPatientId(patientId);
@@ -252,6 +253,70 @@ public class HealthTrackerStatusServiceTest {
     return checkInSchedule;
   }
 
+  private CheckIn createCheckIn(
+      String enrollmentId, LocalDate scheduledDate, SurveyItemPayload item) {
+    CheckIn checkIn = new CheckIn();
+    checkIn.setCheckInType(CheckInType.ORAL);
+    checkIn.setScheduleDate(scheduledDate);
+    checkIn.setSurveyPayload(item);
+    checkIn.setStatus(
+        item != null && !item.getPayload().isEmpty()
+            ? CheckInStatus.COMPLETED
+            : CheckInStatus.MISSED);
+    checkIn.setEnrollmentId(enrollmentId);
+
+    return checkinRepository.save(checkIn);
+  }
+
+  public static Enrollment createOralEnrollment(
+      EnrollmentRepository enrollmentRepository,
+      long clinicId,
+      long locationId,
+      long patientId,
+      LocalDate startDate,
+      LocalDate endDate) {
+    Enrollment enrollment = new Enrollment();
+    enrollment.setClinicId(clinicId);
+    enrollment.setLocationId(locationId);
+    enrollment.setPatientId(patientId);
+    enrollment.setMedication("Xtandi");
+    enrollment.setStatus(EnrollmentStatus.ACTIVE);
+    enrollment.setReminderTimeZone("America/Los_Angeles");
+    enrollment.setTxStartDate(startDate);
+    enrollment.setSchedules(new ArrayList<>());
+
+    CheckInSchedule checkInSchedule = new CheckInSchedule();
+    checkInSchedule.setCheckInType(CheckInType.ORAL);
+    checkInSchedule.setStartDate(startDate);
+    checkInSchedule.setEndDate(endDate);
+    checkInSchedule.setCheckInFrequency(CheckInFrequency.DAILY);
+    enrollment.getSchedules().add(checkInSchedule);
+
+    enrollment = enrollmentRepository.save(enrollment);
+
+    return enrollment;
+  }
+
+  public static List<CheckIn> createOralCheckInsForEnrollment(
+      CheckInRepository checkinRepository, Enrollment enrollment, SurveyItemPayload... items) {
+    LocalDate startDate = enrollment.getStartDate();
+    List<CheckIn> checkIns = new ArrayList<>();
+    for (SurveyItemPayload item : items) {
+      CheckIn checkIn = new CheckIn();
+      checkIn.setCheckInType(CheckInType.ORAL);
+      checkIn.setScheduleDate(startDate);
+      checkIn.setSurveyPayload(item);
+      checkIn.setStatus(CheckInStatus.COMPLETED);
+      checkIn.setEnrollmentId(enrollment.getId());
+
+      checkIns.add(checkinRepository.save(checkIn));
+
+      startDate = startDate.minusDays(1);
+    }
+
+    return checkIns;
+  }
+
   private Enrollment createEnrollment(
       Long clinicId, Long locationId, Long patientId, SurveyItemPayload... items) {
     return createEnrollment(
@@ -267,7 +332,9 @@ public class HealthTrackerStatusServiceTest {
   private Enrollment createStatus(
       Long clinicId, Long locationId, Long patientId, SurveyItemPayload... items) {
     Enrollment enrollment = createEnrollment(clinicId, locationId, patientId, items);
-    HealthTrackerStatusCommand command = new HealthTrackerStatusCommand(enrollment.getId(), null);
+    HealthTrackerStatusCommand command =
+        new HealthTrackerStatusCommand(
+            enrollment.getId(), null, List.of(ObjectId.get().toHexString()));
     healthTrackerStatusService.accept(command);
     return enrollment;
   }
@@ -305,102 +372,6 @@ public class HealthTrackerStatusServiceTest {
     createStatus(clinic, clinic, clinic);
 
     verifyClinic(clinic);
-  }
-
-  @Test
-  public void triageTicketListener_updatesStatus() {
-
-    SurveyItemPayload symptomSurvey =
-        HealthTrackerStatusServiceTest.createSurvey(
-            CheckInService.SYMPTOM_FEVER_SEVERITY, CheckInService.SEVERE);
-
-    Enrollment enrollment = createEnrollment(5L, 5L, 5L, symptomSurvey);
-
-    List<SurveyItemPayload> symptomsList = new ArrayList<>();
-    symptomsList.add(symptomSurvey);
-
-    SurveyPayload payload = new SurveyPayload();
-    payload.setSymptoms(symptomsList);
-
-    HealthTrackerStatusCommand command =
-        new HealthTrackerStatusCommand(enrollment.getId(), payload);
-    healthTrackerStatusService.accept(command);
-
-    HealthTrackerStatus status = healthTrackerStatusService.getOrCreateNewStatus(enrollment);
-    Assert.assertEquals(status.getCategory(), HealthTrackerStatusCategory.TRIAGE);
-
-    String raw =
-        "{\"patient_id\":5,\"clinic_id\":5,\"updated_by_name\":\"John"
-            + " Doe\",\"updated_by_security_identity_id\":2,\"status\":\"watch_carefully\"}";
-    Message message = new Message(raw.getBytes(), new MessageProperties());
-    healthTrackerStatusService.triageTicketListener(message);
-
-    status = healthTrackerStatusService.getOrCreateNewStatus(enrollment);
-    Assert.assertEquals(HealthTrackerStatusCategory.WATCH_CAREFULLY, status.getCategory());
-
-    // Verify status log enrty
-    Enrollment enr2 = enrollmentRepository.findById(enrollment.getId()).get();
-    EnrollmentStatusLog log = enr2.getStatusLogs().get(0);
-    Assert.assertEquals(EnrollmentStatus.STATUS_CHANGE, log.getStatus());
-    Assert.assertEquals(HealthTrackerStatusService.TRIAGE_STATUS_CHANGE_REASON, log.getReason());
-    Assert.assertEquals("2", log.getClinicianId());
-    Assert.assertEquals("John Doe", log.getClinicianName());
-  }
-
-  @Test
-  public void triageTicketListener_recordsTriageMarkedAsError() {
-    SurveyItemPayload symptomSurvey =
-        HealthTrackerStatusServiceTest.createSurvey(
-            CheckInService.SYMPTOM_FEVER_SEVERITY, CheckInService.SEVERE);
-
-    Enrollment enrollment = createEnrollment(5L, 5L, 5L, symptomSurvey);
-
-    List<SurveyItemPayload> symptomsList = new ArrayList<>();
-    symptomsList.add(symptomSurvey);
-
-    SurveyPayload payload = new SurveyPayload();
-    payload.content.setSymptoms(symptomsList);
-
-    HealthTrackerStatusCommand command =
-        new HealthTrackerStatusCommand(enrollment.getId(), payload);
-    healthTrackerStatusService.accept(command);
-
-    HealthTrackerStatus status = healthTrackerStatusService.getOrCreateNewStatus(enrollment);
-    Assert.assertEquals(status.getCategory(), HealthTrackerStatusCategory.TRIAGE);
-
-    String raw =
-        "{\"patient_id\":5,\"clinic_id\":5,\"updated_by_name\":\"John"
-            + " Doe\",\"updated_by_security_identity_id\":2,\"status\":\"no_action_needed\",\"mark_as_error\":true}";
-    Message message = new Message(raw.getBytes(), new MessageProperties());
-    healthTrackerStatusService.triageTicketListener(message);
-
-    status = healthTrackerStatusService.getOrCreateNewStatus(enrollment);
-    Assert.assertEquals(HealthTrackerStatusCategory.NO_ACTION_NEEDED, status.getCategory());
-
-    // Verify status log enrty
-    Enrollment enr2 = enrollmentRepository.findById(enrollment.getId()).get();
-    EnrollmentStatusLog log = enr2.getStatusLogs().get(0);
-    Assert.assertEquals(EnrollmentStatus.STATUS_CHANGE, log.getStatus());
-    Assert.assertEquals(HealthTrackerStatusService.TRIAGE_MARKED_AS_ERROR_REASON, log.getReason());
-    Assert.assertEquals("2", log.getClinicianId());
-    Assert.assertEquals("John Doe", log.getClinicianName());
-  }
-
-  @Test
-  public void triageTicketListener_doesNotThrowForNullProReviewId() {
-    SurveyItemPayload symptomSurvey =
-        HealthTrackerStatusServiceTest.createSurvey(
-            CheckInService.SYMPTOM_FEVER_SEVERITY, CheckInService.SEVERE);
-
-    Enrollment enrollment = createEnrollment(5L, 5L, 5L, symptomSurvey);
-    HealthTrackerStatus status = healthTrackerStatusService.getOrCreateNewStatus(enrollment);
-    status.setProReviewId(null);
-    healthTrackerStatusRepository.save(status);
-    String raw =
-        "{\"patient_id\":5,\"clinic_id\":5,\"updated_by_name\":\"John"
-            + " Doe\",\"updated_by_security_identity_id\":2,\"status\":\"no_action_needed\",\"mark_as_error\":true}";
-    Message message = new Message(raw.getBytes(), new MessageProperties());
-    healthTrackerStatusService.triageTicketListener(message);
   }
 
   @Test
@@ -514,7 +485,8 @@ public class HealthTrackerStatusServiceTest {
             CheckInService.SYMPTOM_SWELLING_SEVERITY, CheckInService.SEVERE);
     SurveyPayload sp = new SurveyPayload();
     sp.content.setSymptoms(Arrays.asList(sip));
-    HealthTrackerStatusCommand command = new HealthTrackerStatusCommand(enrollment.getId(), sp);
+    HealthTrackerStatusCommand command =
+        new HealthTrackerStatusCommand(enrollment.getId(), sp, List.of());
     healthTrackerStatusService.accept(command);
 
     ArgumentCaptor<String> argument = ArgumentCaptor.forClass(String.class);
@@ -534,8 +506,9 @@ public class HealthTrackerStatusServiceTest {
         createSurvey(
             CheckInService.MEDICATION_TAKEN_QUESTION_ID, CheckInService.MEDICATION_TAKEN_ANSWER_ID);
     SurveyPayload sp = new SurveyPayload();
-    sp.content.setOral(Arrays.asList(sip));
-    HealthTrackerStatusCommand command = new HealthTrackerStatusCommand(enrollment.getId(), sp);
+    sp.content.setOral(List.of(sip));
+    HealthTrackerStatusCommand command =
+        new HealthTrackerStatusCommand(enrollment.getId(), sp, List.of());
     healthTrackerStatusService.accept(command);
 
     ArgumentCaptor<String> argument = ArgumentCaptor.forClass(String.class);
@@ -575,7 +548,8 @@ public class HealthTrackerStatusServiceTest {
         createSurvey(CheckInService.PAIN_FEVER_SEVERITY, CheckInService.VERY_SEVERE);
     SurveyPayload sp = new SurveyPayload();
     sp.content.setSymptoms(Arrays.asList(sip));
-    HealthTrackerStatusCommand command = new HealthTrackerStatusCommand(enrollment.getId(), sp);
+    HealthTrackerStatusCommand command =
+        new HealthTrackerStatusCommand(enrollment.getId(), sp, List.of());
     CheckIn ci =
         DefaultDroolsServiceTest.createCheckInsFromSurveyPayload(
             CheckInType.SYMPTOM, LocalDate.now().minusDays(1), sip);
@@ -606,75 +580,14 @@ public class HealthTrackerStatusServiceTest {
     CheckIn c3 = createCheckIn(enrollment.getId(), LocalDate.now().minusDays(1), null);
     CheckIn c4 = createCheckIn(enrollment.getId(), LocalDate.now(), null);
 
-    HealthTrackerStatusCommand command = new HealthTrackerStatusCommand(enrollment.getId(), null);
+    HealthTrackerStatusCommand command =
+        new HealthTrackerStatusCommand(enrollment.getId(), null, List.of());
     this.healthTrackerStatusService.accept(command);
 
-    HealthTrackerStatus status = this.statusRepository.getById(enrollment.getId());
+    HealthTrackerStatus status = this.healthTrackerStatusRepository.getById(enrollment.getId());
 
     Assert.assertNotNull(status);
     Assert.assertEquals(HealthTrackerStatusCategory.ACTION_NEEDED, status.getCategory());
-  }
-
-  private CheckIn createCheckIn(
-      String enrollmentId, LocalDate scheduledDate, SurveyItemPayload item) {
-    CheckIn checkIn = new CheckIn();
-    checkIn.setCheckInType(CheckInType.ORAL);
-    checkIn.setScheduleDate(scheduledDate);
-    checkIn.setSurveyPayload(item);
-    checkIn.setStatus(
-        item != null && !item.getPayload().isEmpty()
-            ? CheckInStatus.COMPLETED
-            : CheckInStatus.MISSED);
-    checkIn.setEnrollmentId(enrollmentId);
-
-    checkinRepository.save(checkIn);
-    return checkIn;
-  }
-
-  public static Enrollment createOralEnrollment(
-      EnrollmentRepository enrollmentRepository,
-      long clinicId,
-      long locationId,
-      long patientId,
-      LocalDate startDate,
-      LocalDate endDate) {
-    Enrollment enrollment = new Enrollment();
-    enrollment.setClinicId(clinicId);
-    enrollment.setLocationId(locationId);
-    enrollment.setPatientId(patientId);
-    enrollment.setMedication("Xtandi");
-    enrollment.setStatus(EnrollmentStatus.ACTIVE);
-    enrollment.setReminderTimeZone("America/Los_Angeles");
-    enrollment.setTxStartDate(startDate);
-    enrollment.setSchedules(new ArrayList<>());
-
-    CheckInSchedule checkInSchedule = new CheckInSchedule();
-    checkInSchedule.setCheckInType(CheckInType.ORAL);
-    checkInSchedule.setStartDate(startDate);
-    checkInSchedule.setEndDate(endDate);
-    checkInSchedule.setCheckInFrequency(CheckInFrequency.DAILY);
-    enrollment.getSchedules().add(checkInSchedule);
-
-    enrollment = enrollmentRepository.save(enrollment);
-
-    return enrollment;
-  }
-
-  public static void createOralCheckInsForEnrollment(
-      CheckInRepository checkinRepository, Enrollment enrollment, SurveyItemPayload... items) {
-    LocalDate startDate = enrollment.getStartDate();
-    for (SurveyItemPayload item : items) {
-      CheckIn checkIn = new CheckIn();
-      checkIn.setCheckInType(CheckInType.ORAL);
-      checkIn.setScheduleDate(startDate);
-      checkIn.setSurveyPayload(item);
-      checkIn.setStatus(CheckInStatus.COMPLETED);
-      checkIn.setEnrollmentId(enrollment.getId());
-
-      checkinRepository.save(checkIn);
-
-      startDate = startDate.minusDays(1);
-    }
   }
 
   @Ignore // TODO: Test failes, fix it or remove it
@@ -695,10 +608,12 @@ public class HealthTrackerStatusServiceTest {
             CheckInService.MEDICATION_TAKEN_QUESTION_ID,
             CheckInService.MEDICATION_TAKEN_ANSWER_ID);
 
-    createOralCheckInsForEnrollment(checkinRepository, enrollment, sip1);
+    var checkIns = createOralCheckInsForEnrollment(checkinRepository, enrollment, sip1);
+    var checkInIds = checkIns.stream().map(AbstractDocument::getId).collect(Collectors.toList());
 
     // call htstatus.processStatus()
-    HealthTrackerStatusCommand command = new HealthTrackerStatusCommand(enrollment.getId(), null);
+    HealthTrackerStatusCommand command =
+        new HealthTrackerStatusCommand(enrollment.getId(), null, checkInIds);
     healthTrackerStatusService.accept(command);
 
     // verify htstatus.category == ACTION_NEEDED
@@ -734,10 +649,11 @@ public class HealthTrackerStatusServiceTest {
             CheckInService.MEDICATION_TAKEN_QUESTION_ID,
             CheckInService.MEDICATION_TAKEN_ANSWER_ID);
 
-    createOralCheckInsForEnrollment(checkinRepository, enrollment, sip1);
-
+    var checkIns = createOralCheckInsForEnrollment(checkinRepository, enrollment, sip1);
+    var checkInIds = checkIns.stream().map(AbstractDocument::getId).collect(Collectors.toList());
     // call htstatus.processStatus()
-    HealthTrackerStatusCommand command = new HealthTrackerStatusCommand(enrollment.getId(), null);
+    HealthTrackerStatusCommand command =
+        new HealthTrackerStatusCommand(enrollment.getId(), null, checkInIds);
     healthTrackerStatusService.accept(command);
 
     // verify htstatus.category == ACTION_NEEDED
@@ -773,10 +689,12 @@ public class HealthTrackerStatusServiceTest {
             CheckInService.MEDICATION_TAKEN_QUESTION_ID,
             CheckInService.MEDICATION_TAKEN_ANSWER_ID);
 
-    createOralCheckInsForEnrollment(checkinRepository, enrollment, sip1);
+    var checkIns = createOralCheckInsForEnrollment(checkinRepository, enrollment, sip1);
+    var checkInIds = checkIns.stream().map(AbstractDocument::getId).collect(Collectors.toList());
 
     // call htstatus.processStatus()
-    HealthTrackerStatusCommand command = new HealthTrackerStatusCommand(enrollment.getId(), null);
+    HealthTrackerStatusCommand command =
+        new HealthTrackerStatusCommand(enrollment.getId(), null, checkInIds);
     healthTrackerStatusService.accept(command);
 
     // verify htstatus.category == ACTION_NEEDED
@@ -878,7 +796,7 @@ public class HealthTrackerStatusServiceTest {
     Assert.assertNotNull(enr2.get().getStatusLogs());
     Assert.assertEquals(2, enr2.get().getStatusLogs().size());
     // Verify events written
-    var events = eventsReposotory.getEnrollmentEvents(enr.getId());
+    var events = eventsRepository.getEnrollmentEvents(enr.getId());
     Assert.assertTrue("events created", events.size() > 0);
     // verify related checkin in events. Get just one event record for the verification purposes
     // that's enough
@@ -890,25 +808,6 @@ public class HealthTrackerStatusServiceTest {
     Assert.assertNotNull(statusChangeEvent.get().getRelatedCheckins());
     Assert.assertEquals(1, statusChangeEvent.get().getRelatedCheckins().size());
     Assert.assertEquals(ciid, statusChangeEvent.get().getRelatedCheckins().get(0).getId());
-  }
-
-  @Test
-  public void testLastCheckinsCall() throws Exception {
-    Enrollment enrollment = createEnrollment(1L, 1L, 1L);
-    CheckIn c2 = createCheckIn(enrollment.getId(), LocalDate.now().minusDays(2), null);
-    CheckIn c3 = createCheckIn(enrollment.getId(), LocalDate.now().minusDays(1), null);
-    CheckIn c4 = createCheckIn(enrollment.getId(), LocalDate.now(), null);
-    CheckIn c5 = createCheckIn(enrollment.getId(), LocalDate.now(), null);
-
-    // Just one ID in the last day, must be there
-    var lastIds = HealthTrackerStatusService.getLastCheckins(List.of(c4, c3, c2));
-    Assert.assertNotNull(lastIds);
-    Assert.assertEquals(Set.of(c4.getId()), lastIds);
-
-    // Two IDs in the last day, both must be there
-    lastIds = HealthTrackerStatusService.getLastCheckins(List.of(c5, c4, c3, c2));
-    Assert.assertNotNull(lastIds);
-    Assert.assertEquals(Set.of(c4.getId(), c5.getId()), lastIds);
   }
 
   @Test
@@ -925,12 +824,74 @@ public class HealthTrackerStatusServiceTest {
     SurveyPayload payload = new SurveyPayload();
     payload.content.setSymptoms(symptomsList);
 
+    CheckIn checkIn =
+        createCheckIn(enrollment.getId(), LocalDate.now().minusDays(2), symptomsList.get(0));
+
     HealthTrackerStatusCommand command =
-        new HealthTrackerStatusCommand(enrollment.getId(), payload);
+        new HealthTrackerStatusCommand(enrollment.getId(), payload, List.of(checkIn.getId()));
     healthTrackerStatusService.accept(command);
 
     HealthTrackerStatus status = healthTrackerStatusService.getOrCreateNewStatus(enrollment);
     String reviewId = status.getProReviewId();
     Assert.assertTrue(reviewId != null && !reviewId.isEmpty());
+
+    var proReview = proReviewRepository.findById(reviewId).get();
+    Assert.assertEquals(proReview.getCheckInIds(), List.of(checkIn.getId()));
+  }
+
+  @Test
+  public void sequentialSurveySubmissions_updatesStatusAndProReview() throws InterruptedException {
+    SurveyItemPayload symptomSurvey =
+        HealthTrackerStatusServiceTest.createSurvey(
+            CheckInService.SYMPTOM_FEVER_SEVERITY, CheckInService.MILD);
+
+    Enrollment enrollment = createStatus(5L, 5L, 5L, symptomSurvey);
+    SurveyPayload firstPayload = new SurveyPayload();
+    firstPayload.content.setSymptoms(List.of(symptomSurvey));
+    CheckIn firstCheckIn =
+        createCheckIn(enrollment.getId(), LocalDate.now().minusDays(2), symptomSurvey);
+
+    SurveyItemPayload oralSurvey =
+        HealthTrackerStatusServiceTest.createSurvey(
+            CheckInService.MEDICATION_TAKEN_QUESTION_ID, "yes");
+
+    SurveyPayload secondPayload = new SurveyPayload();
+    secondPayload.content.setOral(List.of(oralSurvey));
+    CheckIn secondCheckIn =
+        createCheckIn(enrollment.getId(), LocalDate.now().minusDays(2), oralSurvey);
+
+    // submit both at the same time to check for race conditions
+    Callable<Integer> c1 =
+        () -> {
+          healthTrackerStatusService.processStatus(
+              enrollment.getId(), firstPayload, List.of(firstCheckIn.getId()));
+          return 1;
+        };
+
+    Callable<Integer> c2 =
+        () -> {
+          healthTrackerStatusService.processStatus(
+              enrollment.getId(), secondPayload, List.of(secondCheckIn.getId()));
+          return 1;
+        };
+
+    ExecutorService es = Executors.newFixedThreadPool(2);
+    List<Future<Integer>> futures = es.invokeAll(List.of(c1, c2));
+    for (Future<Integer> f : futures) {
+      try {
+        System.out.println(f.get());
+      } catch (ExecutionException e) {
+        System.out.println("error");
+      }
+    }
+
+    HealthTrackerStatus status = healthTrackerStatusRepository.findById(enrollment.getId()).get();
+    ProReview proReview = proReviewRepository.findById(status.getProReviewId()).get();
+
+    Assert.assertEquals(2, proReview.getCheckInIds().size());
+    Assert.assertEquals(1, proReview.getSurveyPayload().getOral().size());
+    Assert.assertEquals(1, proReview.getSurveyPayload().getSymptoms().size());
+    Assert.assertEquals(1, status.getSurveyPayload().getOral().size());
+    Assert.assertEquals(1, status.getSurveyPayload().getSymptoms().size());
   }
 }
